--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Build and publish the Java SDK
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*' # v0.0.1 - this syntax of tags is supported
+      - '[0-9]+.[0-9]+.[0-9]+*' # 0.0.1 - this syntax of tags is supported
 
 jobs:
   build-and-publish-java-sdk:
